Correct style issues from dark mode
Dark mode created issues with rendering. My solution appeared to match the image.
Noticed I didn't catch the centering or font resize in desired outcome.
Double checked and noticed all the areas dark-mode had still created issues.
Adjusted both internal and button css to correct.

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,11 +1,13 @@
 /* styles.css exercise 1.  
 My dark mode Google extensions has to be turned off!  I thought I was doing this wrong. 
-Changed to the native darkmode in Chrome and now rendering correctly. */
+Changed to the native dark mode in Chrome and now rendering correctly. */
 
 div 
 {
     color:white;
     background-color:red;
     font-weight: bold;
+    text-align: center;
+    font-size: large;
    
 }
